--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>mikegentry.net</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Yatra+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,8 +14,13 @@
             <h2>The Portfolio Site for Mike Gentry</h2>
         </div>
         <div class="links">
-
+        <div>
             <a class="github" href="https://github.com/MikeGentry" target="_blank"><img src="images/GitHub_Logo.png"></a>
+        </div>
+
+        <div>
+            <a class="tic-tac-toe" href="https://mikegentry.net/tic_tac_toe/index.html" target="_blank">tic-tac-toe</a>
+        </div>
         </div>
 
     </div>
