added API project link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="tic-tac-toe" href="https://mikegentry.net/tic_tac_toe/index.html" target="_blank">tic-tac-toe</a>
             </div>
             <div class="other-work">
-                <a href="https://mikegentry.net/portfolio/index.html" target="_blank">Employee Directory with API</a>
+                <a href="https://mikegentry.net/empDirectoryAPI/index.html" target="_blank">Employee Directory with API</a>
             </div>
             <div>
                 <a class="github" href="https://github.com/MikeGentry" target="_blank"><img src="images/GitHub_Logo.png"></a>
