--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <div class="main-div">
         <div class="info">
-            <h1 class="name">six-one-nine development</h1>
-            <h2>The Portfolio Site for Mike Gentry</h2>
+            <h1 class="name">The Portfolio Site for Mike Gentry</h1>
+            <h2>full-stack JavaScript student</h2>
         </div>
         <div class="links">
             <div>
-                <a class="tic-tac-toe" href="https://mikegentry.net/tic_tac_toe/index.html" target="_blank">tic-tac-toe</a>
+                <a class="tic-tac-toe" href="https://www.mikegentry.net/tic_tac_toe/index.html" target="_blank">tic-tac-toe</a>
             </div>
             <div class="other-work">
-                <a href="https://mikegentry.net/empDirectoryAPI/index.html" target="_blank">Employee Directory with API</a>
+                <a href="https://www.mikegentry.net/empDirectoryAPI/index.html" target="_blank">Employee Directory with API</a>
             </div>
             <div>
                 <a class="github" href="https://github.com/MikeGentry" target="_blank"><img src="images/GitHub_Logo.png"></a>
